<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_persona"
            android:title="@string/menu_agente"/>
        <item
            android:id="@+id/nav_agendar"
            android:title="@string/menu_agendar" />
        <item
            android:id="@+id/nav_vdAula"
            android:title="@string/menu_vdAula" />
        <item
            android:id="@+id/nav_acompanhamento"
            android:title="@string/menu_acompanhamento" />
        <item
            android:id="@+id/nav_sair"
            android:title="@string/menu_sair" />
    </group>
</menu>
